--- a/index.html
+++ b/index.html
@@ -1,41 +1,237 @@
-<style>
-:root {
-  --color-primary-light: #e7f4fb;
-  --color-primary-mid: #cbeaf9;
-  --color-primary-dark: #9dcee9;
-  --color-white: #fff;
-  --color-text: #222;
-  --color-border: #b0b0b0;
-  --highlight-bg: rgba(157,206,233,0.35);
-  --border-radius: 10px;
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Michael Schimkus - Portfolio</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
+  <style>
+    :root {
+      --color-primary-light: #e7f4fb;
+      --color-primary-mid: #cbeaf9;
+      --color-primary-dark: #9dcee9;
+      --color-white: #ffffff;
+      --color-text: #222222;
+      --color-border: #b0b0b0;
+      --highlight-bg: rgba(157, 206, 233, 0.35);
+      --border-radius: 10px;
+    }
 
-* { box-sizing: border-box; margin: 0; padding: 0; }
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
 
-body {
-  font-family: 'Inter', sans-serif;
-  background: #e7f4fb; /* changed to very light blue */
-  color: var(--color-text);
-  scroll-behavior: smooth;
-  line-height: 1.6;
-}
+    body {
+      font-family: 'Inter', sans-serif;
+      background: var(--color-primary-light);
+      color: var(--color-text);
+      line-height: 1.6;
+      scroll-behavior: smooth;
+    }
 
-/* ... existing styles ... */
+    header {
+      text-align: center;
+      padding: 1rem 0 0.5rem;
+    }
 
-nav a {
-  color: var(--color-text);
-  padding: 0.6rem 1.5rem;
-  font-weight: 600;
-  font-size: 1.1rem;
-  text-decoration: none;
-  transition: background-color 0.25s ease;
-  text-shadow: 0 0 1px var(--color-white);
-}
+    header h1 {
+      font-size: 1.9rem;
+      font-weight: 600;
+      color: var(--color-text);
+      text-shadow: 0 0 1px var(--color-white);
+    }
 
-footer p {
-  font-size: 1.1rem;
-  font-weight: 600;
-  color: var(--color-text);
-  text-shadow: 0 0 1px var(--color-white); /* match nav text style */
-}
-</style>
+    nav {
+      display: flex;
+      justify-content: center;
+      background: var(--color-white);
+      border: 1px solid var(--color-border);
+      border-radius: var(--border-radius);
+      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
+      max-width: 1200px;
+      margin: 0 auto 1rem auto;
+      overflow: hidden;
+      position: sticky;
+      top: 0.5rem;
+      z-index: 100;
+    }
+
+    nav a {
+      color: var(--color-text);
+      padding: 0.6rem 1.5rem;
+      font-weight: 600;
+      font-size: 1.1rem;
+      text-decoration: none;
+      transition: background-color 0.25s ease;
+      text-shadow: 0 0 1px var(--color-white);
+      border-radius: var(--border-radius);
+    }
+
+    nav a:hover {
+      background-color: rgba(157, 206, 233, 0.2);
+    }
+
+    nav a.active {
+      background-color: var(--highlight-bg);
+    }
+
+    main {
+      max-width: 1200px;
+      margin: 0 auto;
+      padding: 1rem;
+    }
+
+    .section-title {
+      font-size: 1.7rem;
+      font-weight: 700;
+      color: var(--color-text);
+      margin: 1rem 0 0.3rem;
+      text-shadow: 0 0 1px var(--color-white);
+    }
+
+    .card {
+      background: var(--color-white);
+      padding: 1.5rem;
+      border-radius: var(--border-radius);
+      border: 1px solid var(--color-border);
+      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
+      margin-bottom: 1.5rem;
+    }
+
+    .project-title {
+      font-size: 1rem;
+      font-weight: 600;
+      color: var(--color-text);
+      margin-bottom: 0.5rem;
+    }
+
+    .gallery {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+    }
+
+    .gallery-item img {
+      width: 100%;
+      height: 180px;
+      object-fit: cover;
+      border-radius: 8px;
+    }
+
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+    }
+
+    input, textarea, button {
+      font: inherit;
+      border-radius: 8px;
+    }
+
+    input, textarea {
+      padding: 0.85rem;
+      border: 1px solid #ccc;
+    }
+
+    button {
+      background: var(--color-primary-mid);
+      color: var(--color-white);
+      padding: 0.85rem;
+      border: none;
+      font-weight: 700;
+      cursor: pointer;
+    }
+
+    footer {
+      text-align: center;
+      padding: 0.5rem;
+      background: var(--color-white);
+      border: 1px solid var(--color-border);
+      border-radius: var(--border-radius);
+      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
+      max-width: 1200px;
+      margin: 1rem auto;
+    }
+
+    footer p {
+      font-size: 1.1rem;
+      font-weight: 600;
+      color: var(--color-text);
+      text-shadow: 0 0 1px var(--color-white);
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Michael Schimkus</h1>
+  </header>
+
+  <nav>
+    <a href="#about" class="nav-link">About</a>
+    <a href="#portfolio" class="nav-link">Portfolio</a>
+    <a href="#contact" class="nav-link">Contact</a>
+  </nav>
+
+  <main>
+    <h2 class="section-title">About</h2>
+    <section id="about" class="card">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ut felis et justo fermentum vestibulum sed vel eros.</p>
+      <p>Nam sollicitudin orci sed augue tempor, ut vulputate velit suscipit. Fusce pretium nisi eu neque tempor, at pulvinar orci faucibus.</p>
+    </section>
+
+    <h2 class="section-title">Portfolio</h2>
+    <section id="portfolio" class="card">
+      <div class="gallery">
+        <div class="gallery-item">
+          <h3 class="project-title">Project 1</h3>
+          <img src="https://via.placeholder.com/800x500" alt="Project 1">
+        </div>
+        <div class="gallery-item">
+          <h3 class="project-title">Project 2</h3>
+          <img src="https://via.placeholder.com/800x500/eeeeee/333" alt="Project 2">
+        </div>
+      </div>
+    </section>
+
+    <h2 class="section-title">Contact</h2>
+    <section id="contact" class="card">
+      <form>
+        <input type="text" placeholder="Your Name" required />
+        <input type="email" placeholder="Your Email" required />
+        <textarea rows="5" placeholder="Your Message" required></textarea>
+        <button type="submit">Send Message</button>
+      </form>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Michael Schimkus</p>
+  </footer>
+
+  <script>
+    const navLinks = document.querySelectorAll('.nav-link');
+    const sections = document.querySelectorAll('main section');
+
+    function setActiveLink(id) {
+      navLinks.forEach(link => {
+        link.classList.toggle('active', link.getAttribute('href') === `#${id}`);
+      });
+    }
+
+    function updateActiveSection() {
+      let current = '';
+      sections.forEach(section => {
+        const offset = section.offsetTop - 120;
+        if (pageYOffset >= offset) current = section.id;
+      });
+      if (current) setActiveLink(current);
+    }
+
+    window.addEventListener('scroll', updateActiveSection);
+    updateActiveSection();
+  </script>
+</body>
+</html>
