--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Michael Schimkus - Portfolio</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Figtree:wght@400;600&display=swap" rel="stylesheet" />
   <style>
     :root {
-      --color-primary-light: #e7f4fb;
+      --color-primary-light: #f7fbfd;
       --color-primary-mid: #cbeaf9;
       --color-primary-dark: #9dcee9;
       --color-white: #ffffff;
@@ -15,6 +15,7 @@
       --color-border: #b0b0b0;
       --highlight-bg: rgba(157, 206, 233, 0.35);
       --border-radius: 10px;
+      --max-width: 1200px;
     }
 
     * {
@@ -24,7 +25,7 @@
     }
 
     body {
-      font-family: 'Inter', sans-serif;
+      font-family: 'Figtree', 'Inter', sans-serif;
       background: var(--color-primary-light);
       color: var(--color-text);
       line-height: 1.6;
@@ -34,6 +35,8 @@
     header {
       text-align: center;
       padding: 1rem 0 0.5rem;
+      max-width: var(--max-width);
+      margin: 0 auto;
     }
 
     header h1 {
@@ -50,7 +53,7 @@
       border: 1px solid var(--color-border);
       border-radius: var(--border-radius);
       box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
-      max-width: 1200px;
+      max-width: var(--max-width);
       margin: 0 auto 1rem auto;
       overflow: hidden;
       position: sticky;
@@ -59,15 +62,15 @@
     }
 
     nav a {
-      color: var(--color-text);
-      padding: 0.6rem 1.5rem;
-      font-weight: 600;
-      font-size: 1.1rem;
-      text-decoration: none;
-      transition: background-color 0.25s ease;
-      text-shadow: 0 0 1px var(--color-white);
-      border-radius: var(--border-radius);
-    }
+  color: var(--color-text);
+  padding: 0.4rem 1rem;
+  font-weight: 600;
+  font-size: 1.1rem;
+  text-decoration: none;
+  transition: background-color 0.25s ease;
+  text-shadow: 0 0 1px var(--color-white);
+  border-radius: var(--border-radius);
+}
 
     nav a:hover {
       background-color: rgba(157, 206, 233, 0.2);
@@ -78,7 +81,7 @@
     }
 
     main {
-      max-width: 1200px;
+      max-width: var(--max-width);
       margin: 0 auto;
       padding: 1rem;
     }
@@ -152,16 +155,18 @@
       border: 1px solid var(--color-border);
       border-radius: var(--border-radius);
       box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
-      max-width: 1200px;
+      max-width: var(--max-width);
       margin: 1rem auto;
     }
 
     footer p {
-      font-size: 1.1rem;
-      font-weight: 600;
-      color: var(--color-text);
-      text-shadow: 0 0 1px var(--color-white);
-    }
+  font-size: 1.1rem;
+  font-weight: 600;
+  color: var(--color-text);
+  text-shadow: 0 0 1px var(--color-white);
+  position: relative;
+  display: inline-block;
+}
   </style>
 </head>
 <body>
@@ -209,6 +214,9 @@
 
   <footer>
     <p>&copy; 2025 Michael Schimkus</p>
+  <div style="margin-top: 0.5rem;">
+      <a href="#" style="text-decoration: none; font-size: 1.5rem; color: var(--color-text); text-shadow: 0 0 1px var(--color-white);">&#8679;</a>
+    </div>
   </footer>
 
   <script>
@@ -233,5 +241,26 @@
     window.addEventListener('scroll', updateActiveSection);
     updateActiveSection();
   </script>
+<div id="lightbox" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.9); justify-content:center; align-items:center; z-index:9999;">
+  <img id="lightbox-img" src="" style="max-width:90%; max-height:90%; border-radius:10px;" alt="Enlarged image">
+</div>
+
+<script>
+  const galleryImages = document.querySelectorAll('.gallery-item img');
+  const lightbox = document.getElementById('lightbox');
+  const lightboxImg = document.getElementById('lightbox-img');
+
+  galleryImages.forEach(img => {
+    img.addEventListener('click', () => {
+      lightbox.style.display = 'flex';
+      lightboxImg.src = img.src;
+    });
+  });
+
+  lightbox.addEventListener('click', () => {
+    lightbox.style.display = 'none';
+    lightboxImg.src = '';
+  });
+</script>
 </body>
 </html>
