--- a/index.html
+++ b/index.html
@@ -1,110 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Michael Schimkus - Portfolio (v16)</title>
-  <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@400;600&display=swap" rel="stylesheet"/>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Michael Schimkus - Portfolio (v12)</title>
+  <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@400;600&display=swap" rel="stylesheet" />
   <style>
     :root {
       --bg-light: #f6fcff;
-      --card-bg:   #ffffff;
-      --text:      #222222;
-      --nav-highlight: rgba(0,123,255,0.5);
-      --radius:    8px;
-      --max-w:     1200px;
+      --nav-bg:   #cbeaf9;
+      --text:     #222222;
+      --highlight:rgba(0,123,255,0.5);
+      --radius:   8px;
+      --max-w:    1200px;
     }
-    *, *::before, *::after { box-sizing: border-box; margin: 0; padding: 0; }
+    *, *::before, *::after { box-sizing:border-box; margin:0; padding:0; }
     body {
-      font-family: 'Public Sans', sans-serif;
-      background: var(--bg-light);
-      color: var(--text);
-      line-height: 1.6;
-      scroll-behavior: smooth;
+      font-family:'Public Sans',sans-serif;
+      background:var(--bg-light);
+      color:var(--text);
+      line-height:1.6;
+      scroll-behavior:smooth;
     }
     .container {
-      max-width: var(--max-w);
-      margin: 0 auto;
-      padding: 0 1rem;
+      max-width:var(--max-w);
+      margin:0 auto;
+      padding:0 1rem;
     }
+    /* Navigation */
     nav {
-      background: var(--card-bg);
-      border-radius: var(--radius);
-      box-shadow: 0 4px 16px rgba(0,0,0,0.1);
-      margin: 1.5rem 0;
-      padding: 1rem;
+      margin:1rem 0;
+      padding:0;
     }
     .nav-inner {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 1rem;
+      display:flex;
+      flex-direction:column;
+      align-items:center;
+      gap:2rem;
+      padding:1rem 0;
     }
-    .nav-inner h1 {
-      font-size: 2.2rem;
-      font-weight: 600;
+    .nav-inner > h1 {
+      font-size:2.2rem;
+      font-weight:600;
+      color:var(--text);
     }
     .nav-links {
-      display: flex;
-      gap: 1.5rem;
+      display:flex;
+      gap:1.5rem;
+      background:var(--nav-bg);
+      padding:0.5rem 1rem;
+      border-radius:var(--radius);
     }
     .nav-links a {
-      color: var(--text);
-      padding: 0.4rem 0.8rem;
-      font-size: 1.1rem;
-      font-weight: 600;
-      text-decoration: none;
-      border-radius: var(--radius);
-      transition: background-color 0.2s;
+      color:var(--text);
+      padding:0.4rem 0.8rem;
+      font-size:1.1rem;
+      font-weight:600;
+      text-decoration:none;
+      border-radius:var(--radius);
+      transition:background-color .2s;
     }
     .nav-links a:hover,
-    .nav-links a.active { background: var(--nav-highlight); }
-    main .card {
-      background: var(--card-bg);
-      border-radius: var(--radius);
-      box-shadow: 0 4px 16px rgba(0,0,0,0.1);
-      margin: 1.5rem 0;
-      padding: 1.5rem;
+    .nav-links a.active { background:var(--highlight); }
+    /* Main content */
+    .card {
+      background:#fff;
+      border-radius:var(--radius);
+      box-shadow:0 4px 16px rgba(0,0,0,0.1);
+      margin:1.5rem 0;
+      padding:1.5rem;
     }
     .card h2 {
-      font-size: 1.6rem;
-      font-weight: 800;
-      margin-bottom: 0.5rem;
+      font-size:1.6rem;
+      font-weight:800;
+      margin-bottom:.5rem;
     }
     .gallery-item img {
-      width: 100%;
-      border-radius: 6px;
-      cursor: pointer;
+      width:100%;
+      border-radius:6px;
+      cursor:pointer;
     }
     .project-title {
-      font-size: 1rem;
-      font-weight: 600;
-      margin-top: 0.5rem;
+      font-size:1rem;
+      font-weight:600;
+      margin-top:.5rem;
     }
     form {
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
+      display:flex;
+      flex-direction:column;
+      gap:1rem;
     }
-    input, textarea {
-      padding: 0.85rem;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-      font: inherit;
+    input,textarea {
+      padding:.85rem;
+      border:1px solid #ccc;
+      border-radius:6px;
+      font:inherit;
     }
     button {
-      background: var(--nav-highlight);
-      color: #fff;
-      padding: 0.85rem;
-      border: none;
-      font-weight: 700;
-      border-radius: 6px;
-      cursor: pointer;
+      background:var(--nav-bg);
+      color:#fff;
+      padding:.85rem;
+      border:none;
+      font-weight:700;
+      border-radius:6px;
+      cursor:pointer;
     }
-    
+    footer {
+      text-align:center;
+      margin:2rem 0;
+      font-size:.9rem;
+      font-weight:600;
+    }
     @media(max-width:600px) {
-      .nav-links a { font-size: 1rem; padding: 0.3rem 0.6rem; }
-      .card h2 { font-size: 1.4rem; }
+      .nav-links a { font-size:1rem; padding:.3rem .6rem; }
+      .card h2 { font-size:1.4rem; }
     }
   </style>
 </head>
@@ -142,8 +151,8 @@
       </form>
     </section>
   </main>
-  <footer class="container card">
-    &copy; 2025 Michael Schimkus | <a href="#">Return to top</a> | v16
+  <footer class="container">
+    &copy; 2025 Michael Schimkus | <a href="#">Return to top</a> | v12
   </footer>
   <script>
     const links = document.querySelectorAll('.nav-link');
