--- a/index.html
+++ b/index.html
@@ -1,137 +1,130 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Michael Schimkus - Portfolio (v12)</title>
-  <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@400;600&display=swap" rel="stylesheet" />
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>Michael Schimkus - Portfolio (v10)</title>
+  <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@400;600&display=swap" rel="stylesheet"/>
   <style>
     :root {
-      --bg-light: #f6fcff;
-      --nav-bg:   #cbeaf9;
-      --text:     #222222;
-      --highlight:rgba(0,123,255,0.5);
-      --radius:   8px;
-      --max-w:    1200px;
+      --color-primary-light: #f6fcff;
+      --color-white:        #ffffff;
+      --color-text:         #222222;
+      --highlight-bg:       rgba(0,123,255,0.35);
+      --border-radius:      10px;
+      --max-width:          1200px;
     }
-    *, *::before, *::after { box-sizing:border-box; margin:0; padding:0; }
+    *, *::before, *::after {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
     body {
-      font-family:'Public Sans',sans-serif;
-      background:var(--bg-light);
-      color:var(--text);
-      line-height:1.6;
-      scroll-behavior:smooth;
+      font-family: 'Public Sans', sans-serif;
+      background: var(--color-primary-light);
+      color: var(--color-text);
+      line-height: 1.6;
+      scroll-behavior: smooth;
     }
     .container {
-      max-width:var(--max-w);
-      margin:0 auto;
-      padding:0 1rem;
+      max-width: var(--max-width);
+      margin: 0 auto;
+      padding: 0 1rem;
     }
-    /* Navigation */
+    header, footer {
+      text-align: center;
+      padding: 0.5rem 0;
+      background: var(--color-white);
+      border-radius: var(--border-radius);
+      box-shadow: 0 6px 20px rgba(0,0,0,0.1);
+      margin: 1rem 0;
+      font-weight: 600;
+    }
+    header h1 {
+      font-size: 2rem;
+      margin: 0;
+    }
     nav {
-      margin:1rem 0;
-      padding:0;
+      display: flex;
+      justify-content: center;
+      gap: 1.5rem;
+      background: var(--color-white);
+      border-radius: var(--border-radius);
+      box-shadow: 0 6px 20px rgba(0,0,0,0.1);
+      padding: 0.5rem 0;
+      margin: 1rem 0;
     }
-    .nav-inner {
-      display:flex;
-      flex-direction:column;
-      align-items:center;
-      gap:2rem;
-      padding:1rem 0;
+    nav a {
+      color: var(--color-text);
+      padding: 0.3rem 1rem;
+      font-size: 1.2rem;
+      font-weight: 600;
+      text-decoration: none;
+      border-radius: var(--border-radius);
+      transition: background-color 0.25s;
     }
-    .nav-inner > h1 {
-      font-size:2.2rem;
-      font-weight:600;
-      color:var(--text);
+    nav a:hover,
+    nav a.active { background-color: var(--highlight-bg); }
+    main {
+      padding-bottom: 1rem;
     }
-    .nav-links {
-      display:flex;
-      gap:1.5rem;
-      background:var(--nav-bg);
-      padding:0.5rem 1rem;
-      border-radius:var(--radius);
-    }
-    .nav-links a {
-      color:var(--text);
-      padding:0.4rem 0.8rem;
-      font-size:1.1rem;
-      font-weight:600;
-      text-decoration:none;
-      border-radius:var(--radius);
-      transition:background-color .2s;
-    }
-    .nav-links a:hover,
-    .nav-links a.active { background:var(--highlight); }
-    /* Main content */
-    .card {
-      background:#fff;
-      border-radius:var(--radius);
-      box-shadow:0 4px 16px rgba(0,0,0,0.1);
-      margin:1.5rem 0;
-      padding:1.5rem;
+    section.card {
+      background: var(--color-white);
+      border-radius: var(--border-radius);
+      box-shadow: 0 6px 20px rgba(0,0,0,0.1);
+      margin: 1.5rem 0;
+      padding: 1.5rem;
     }
     .card h2 {
-      font-size:1.6rem;
-      font-weight:800;
-      margin-bottom:.5rem;
+      font-size: 1.6rem;
+      font-weight: 800;
+      margin-bottom: 0.5rem;
     }
     .gallery-item img {
-      width:100%;
-      border-radius:6px;
-      cursor:pointer;
+      width: 100%;
+      height: auto;
+      border-radius: 8px;
+      cursor: pointer;
     }
     .project-title {
-      font-size:1rem;
-      font-weight:600;
-      margin-top:.5rem;
+      font-size: 1rem;
+      font-weight: 600;
+      margin-top: 0.5rem;
+      text-align: center;
     }
     form {
-      display:flex;
-      flex-direction:column;
-      gap:1rem;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
     }
-    input,textarea {
-      padding:.85rem;
-      border:1px solid #ccc;
-      border-radius:6px;
-      font:inherit;
+    input, textarea {
+      padding: 0.85rem;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      font: inherit;
     }
     button {
-      background:var(--nav-bg);
-      color:#fff;
-      padding:.85rem;
-      border:none;
-      font-weight:700;
-      border-radius:6px;
-      cursor:pointer;
-    }
-    footer {
-      text-align:center;
-      margin:2rem 0;
-      font-size:.9rem;
-      font-weight:600;
-    }
-    @media(max-width:600px) {
-      .nav-links a { font-size:1rem; padding:.3rem .6rem; }
-      .card h2 { font-size:1.4rem; }
+      background: var(--color-primary-mid);
+      color: var(--color-white);
+      padding: 0.85rem;
+      border: none;
+      font-weight: 700;
+      border-radius: 8px;
+      cursor: pointer;
     }
   </style>
 </head>
 <body>
-  <nav>
-    <div class="nav-inner container">
-      <h1>Michael Schimkus</h1>
-      <div class="nav-links">
-        <a href="#about" class="nav-link">About</a>
-        <a href="#portfolio" class="nav-link">Portfolio</a>
-        <a href="#contact" class="nav-link">Contact</a>
-      </div>
-    </div>
+  <header class="container"><h1>Michael Schimkus</h1></header>
+  <nav class="container">
+    <a href="#about" class="nav-link">About</a>
+    <a href="#portfolio" class="nav-link">Portfolio</a>
+    <a href="#contact" class="nav-link">Contact</a>
   </nav>
   <main class="container">
     <section id="about" class="card">
       <h2>About</h2>
-      <p>This is a sample paragraph for the About section. It describes who you are and what you do.</p>
+      <p>This is a sample paragraph for the About section. It describes who you are, what you do, and what your goals might be.</p>
       <p>This is a second sample paragraph for demonstration purposes.</p>
     </section>
     <section id="portfolio" class="card">
@@ -151,17 +144,17 @@
       </form>
     </section>
   </main>
-  <footer class="container">
-    &copy; 2025 Michael Schimkus | <a href="#">Return to top</a> | v12
-  </footer>
+  <footer class="container">&copy; 2025 Michael Schimkus | Return to top | v10</footer>
   <script>
-    const links = document.querySelectorAll('.nav-link');
+    const navLinks = document.querySelectorAll('.nav-link');
     const secs = document.querySelectorAll('section');
-    function setActive(id) { links.forEach(l => l.classList.toggle('active', l.getAttribute('href')===`#${id}`)); }
+    function setActive(id) {
+      navLinks.forEach(l => l.classList.toggle('active', l.getAttribute('href') === `#${id}`));
+    }
     window.addEventListener('scroll', () => {
-      let cur = '';
-      secs.forEach(s => { if (pageYOffset >= s.offsetTop - 100) cur = s.id; });
-      if (cur) setActive(cur);
+      let current = '';
+      secs.forEach(s => { if (pageYOffset >= s.offsetTop - 60) current = s.id; });
+      if (current) setActive(current);
     });
   </script>
 </body>
